<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">DouDou</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_text">你和好友的任务口袋</string>
    <string name="login_text">Welcome DouDou</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册 </string>
    <string name="other_login">第三方帐号登录</string>
    <string name="no_conn_network">网络未连接，请检查网络设置 !</string>
    <string name="other_login_fail">第三方登录登陆失败！</string>
    <string name="sex">性别</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="commit">提交</string>
    <string name="notid">请输手机号</string>
    <string name="notpass">请输入密码</string>
    <string name="passerror">你输入的密码不正确</string>
    <string name="usernotfind">你输入的手机号不存在</string>
    <string name="login_now">正在登陆....</string>
    <string name="logout">退出登录</string>
    <string name="namenotnull">请输入手机号!</string>
    <string name="passnotnull">请输入登陆密码!</string>
    <string name="twopassnotpass">确认密码和登陆密码不一置!</string>
    <string name="pass_so_easy">密码至少6位!</string>
    <string name="beingRegister">注册中......</string>
    <string name="register_succes">注册成功</string>
    <string name="registerFail">注册失败，请重试！</string>
    <string name="login_fail">帐号或密码错误!</string>
    <string name="register_fail_username">注册失败，帐户已存在！</string>
    <string name="other_qq">QQ</string>
    <string name="other_weibo">微博</string>
    <string name="other_weixin">微信</string>
    <string name="back">返回</string>
    <string name="input_phone_nubmer">请输入您的手机号</string>
    <string name="input_password">请输入6-20位的密码</string>
    <string name="input_new_password">请输入您的新密码</string>
    <string name="now_login">立即登录</string>
    <string name="now_register">立即注册</string>
    <string name="input_phone_verify">请输入手机验证码</string>
    <string name="send_verify">发送验证码</string>
    <string name="reset_password">重置密码 </string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="tab_calendar">任务日历</string>
    <string name="tab_me">我</string>
    <string name="tab_friends">好友列表</string>
    <string name="tab_find">发现</string>
    <string name="pass_exit">再按一次退出应用！</string>
    <string name="calendar">日历</string>
    <string name="lists">列表</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="loading">正在玩命加载....</string>
    <string name="status_finish">已完成</string>
    <string name="status_progress">进行中</string>
    <string name="task_public">对所有人公开</string>
    <string name="task_only_friend">仅好友可见</string>
    <string name="task_only_self">仅自己可见</string>
    <string name="search">搜索</string>
    <string name="your_friend">我的好友</string>
    <string name="no_add_friend">以下好友待添加</string>
    <string name="assigned_ta">分配ta</string>
    <string name="add_ta">逗ta</string>
    <string name="add_friend">加好友</string>
    <string name="invite_ta">邀请ta</string>
    <string name="complete">完成</string>
    <string name="new_task">新建任务</string>
    <string name="new_task_name">任务名称</string>
    <string name="new_assigned">分配给谁</string>
    <string name="new_conent">任务内容</string>
    <string name="new_final_date">到期时间</string>
    <string name="new_remind">提醒</string>
    <string name="location">所在位置</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">yyyy年MMMM</string>
    <string name="today">今天</string>
    <string name="upgrade">升级</string>
    <string name="appraisal">给好评</string>
    <string name="lv_score">等级与积分</string>
    <string name="secrecy">隐私</string>
    <string name="judgement">给我们意见</string>
    <string name="about">关于</string>
    <string name="task_find">任务发现</string>
    <string name="drift_bottles">漂流瓶</string>
    <string name="intelligent_task">智能任务</string>
    <string name="user_info">个人资料</string>
    <string name="user_head">头像</string>
    <string name="user_name">名字</string>
    <string name="user_six">性别</string>
    <string name="user_address">地区</string>
    <string name="user_signature">签名</string>
    <string name="user_phone">绑定手机</string>
    <string name="user_email">绑定邮箱</string>
    <string name="user_good_at">擅长领域</string>
    <string name="add_label">+标签</string>
    <string name="add_label_to">+给ta标签</string>
    <string name="user_no_phone">未绑定邮箱</string>
    <string name="user_no_email">未绑定手机</string>
    <string name="user_no_signature">好懒！什么都没写？</string>
    <string name="user_no_address">未知</string>
    <string name="task_info">任务详情</string>
    <string name="advance_time">不提前提醒</string>
    <string name="advance_time_sec">提前 <xliff:g id="time">%1$s</xliff:g>分钟</string>
    <string name="advance_time_hour">提前 <xliff:g id="time">%1$s</xliff:g>小时</string>
    <string name="task_no_final_date">无到期时间</string>
    <string name="task_accept">接受</string>
    <string name="task_no_accept">拒绝</string>
    <string name="assigned_task">指派任务</string>
    <string name="send_message">发起对话</string>
    <string name="ta_task_calendar">ta的任务日历</string>
    <string name="like_people">我可能感兴趣的人</string>
    <string name="input_phone_number">输入手机号码</string>
    <string name="add">添加</string>
    <string name="out_box">发件箱</string>
    <string name="date_now">刚才</string>
    <string name="date_min_befor">分钟前</string>
    <string name="date_hour_befor">小时前</string>
    <string name="date_day_befor">天前</string>
    <string name="date_month_befor">个月前</string>
    <string name="remind_ta">提醒ta</string>
    <string name="has_accept">已接收</string>
    <string name="has_no_accept">已拒绝</string>
    <string name="waiting">等待中</string>
    <string name="has_final">已完成</string>
    <string name="assigned_to">分配给</string>
    <string name="outside_friend">站外好友（创建后可通过微信/QQ发送）</string>
    <string name="my_self">我自己</string>
    <string name="send">发送</string>
    <string name="add_task">添加一个任务</string>
    <string name="complete_create_task">确认要创建此任务吗？</string>
    <string name="task_remark">备注</string>
    <string name="task_repeat">重复</string>
    <string name="task_no_repeat">不重复</string>
    <string name="task_day_repeat">每天</string>
    <string name="task_week_repeat">每个星期</string>
    <string name="task_month_repeat">每个月</string>
    <string name="task_year_repeat">每年</string>
    <string name="diy">自定义</string>
    <string name="task_repeat_count">重复次数</string>
    <string name="task_location">地理位置</string>
    <string name="input_content">请输入详细内容</string>
    <string name="input_location">请输入相关位置</string>
    <string name="task_name_same">已存在相同名称的任务</string>
    <string name="task_new_success">任务创建成功...</string>
    <string name="add_pic">添加图片</string>

    <string-array name="add_pic_array">
        <item>拍照</item>
        <item>从手机相册选择</item>
    </string-array>

    <string name="pic_added">已经添加过些图片</string>
    <string name="sure_delete">确定要删除这张照片吗？</string>
    <string name="alert">提示</string>
    <string name="start_voice">开始录音</string>
    <string name="setting_privacy">设置隐私</string>

</resources>