<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:drawableLeft="@drawable/back_left_bg"
                android:drawablePadding="10dip"
                android:gravity="center_vertical"
                android:onClick="onBack"
                android:paddingLeft="15dip"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/user_register"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/register_logo"
                android:contentDescription="@string/action_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/login_text"
                android:textColor="@color/logo_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_bg"
            android:hint="@string/input_phone_nubmer"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:layout_marginTop="8dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/number_verify"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_marginTop="8dip"
                android:background="@drawable/textfield_bg"
                android:hint="@string/input_phone_verify"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="17sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/verify_btn__bg"
                android:text="@string/send_verify"
                android:textColor="@color/send_verify_color"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_bg"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="17sp" />

        <Button
            android:id="@+id/commit_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:background="@drawable/red_button_bg"
            android:gravity="center"
            android:text="@string/now_register"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>