<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/title"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:drawableLeft="@drawable/back_left_bg"
            android:drawablePadding="10dip"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="15dip"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/view_margin"
        android:background="@drawable/title_background"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_head"
            android:contentDescription="@string/action_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dip"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/login_text"
            android:textColor="@color/logo_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="@dimen/view_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dip" >

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_bg"
            android:drawableLeft="@drawable/edit_user"
            android:drawablePadding="10dip"
            android:hint="@string/input_phone_nubmer"
            android:inputType="phone"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dip"
            android:background="@drawable/textfield_bg"
            android:drawableLeft="@drawable/edit_pass"
            android:drawablePadding="10dip"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@drawable/red_button_bg"
        android:text="@string/now_login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/now_regiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:clickable="true"
            android:padding="15dip"
            android:text="@string/now_register"
            android:textColor="@color/login_bottom_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:clickable="true"
            android:padding="15dip"
            android:text="@string/forgot_pass"
            android:textColor="@color/login_bottom_text_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>