<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_background_bg"
    android:clickable="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip" >

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/login_head"
            android:contentDescription="@string/action_settings" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/user_photo"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/task_name_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/add_friend"
                android:layout_width="wrap_content"
                android:layout_height="35dip"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:background="@drawable/verify_btn__bg"
                android:gravity="center_vertical|right"
                android:text="@string/add_friend"
                android:textColor="@color/send_verify_color"
                android:textSize="17sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/assigned_ta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:drawablePadding="4dip"
                android:drawableRight="@drawable/right_arrow_bg"
                android:gravity="center_vertical|right"
                android:paddingRight="5dip"
                android:text="@string/assigned_ta"
                android:textColor="@color/assigned_text_color"
                android:textSize="17sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@drawable/driver_color" />

</LinearLayout>